# policy-store

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  mixin-cargo-build.yml  mixin-cargo-check.yml  mixin-cargo-test.yml  nightly.yml
ci-cd/: msrv
examples/jwk/: key.json  main.rs  token.txt
examples/jwk/requests/: activate.sh  add_version.sh  deactivate.sh  get_activator.sh  get_active_version.sh  get_version_content.sh  get_version_metadata.sh  get_versions.sh
examples/sqlite/: main.rs
examples/sqlite/requests/: activate.sh  add-version.sh  add_version.sh  deactivate.sh  get_activator.sh  get_active_version.sh  get_version_content.sh  get_version_metadata.sh  get_versions.sh
lib/auth/jwk/: Cargo.toml
lib/auth/jwk/src/: authresolver.rs  lib.rs
lib/auth/jwk/src/keyresolver/: kid.rs  mod.rs
lib/auth/no-op/: Cargo.toml
lib/auth/no-op/src/: lib.rs
lib/databases/sqlite/: Cargo.toml  build.rs
lib/databases/sqlite/migrations/2024-10-22-153100_create_policies/: up.sql
lib/databases/sqlite/migrations/2024-10-24-121939_create_posts/: down.sql  up.sql
lib/databases/sqlite/migrations/2024-11-25-095159_policies/: down.sql  up.sql
lib/databases/sqlite/src/: .gitignore  databaseconn.rs  lib.rs  models.rs  schema.rs
lib/servers/axum/: Cargo.toml
lib/servers/axum-spec/: Cargo.toml
lib/servers/axum-spec/src/: lib.rs
lib/servers/axum/src/: auth.rs  lib.rs  paths.rs  server.rs  spec.rs
lib/spec/: Cargo.toml
lib/spec/src/: authresolver.rs  databaseconn.rs  lib.rs  metadata.rs  server.rs
src/: lib.rs
