[workspace]
resolver = "2"
members = [
    # Servers
    "lib/servers/axum",

    # Auth
    "lib/auth/jwk",

    # Databases
    "lib/databases/sqlite",

    # Library stuff
    "lib/spec"
]


[package]
name = "policy-store"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman", "Daniel Voogsgerd", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Stores policy for use with a policy reasoner."


[workspace.package]
repository = "https://github.com/epi-project/policy-store"
license = "Apache-2.0"


[dependencies]
axum-api = { path = "lib/servers/axum", optional = true }
jwk-auth = { path = "lib/auth/jwk", optional = true }
specifications = { path = "lib/spec" }
sqlite-database = { path = "lib/databases/sqlite", optional = true }


[features]
default = []

all = ["servers", "auths", "databases"]

servers = ["axum-api"]
axum-api = ["dep:axum-api"]

auths = ["jwk-auth"]
jwk-auth = ["dep:jwk-auth"]

databases = ["sqlite-database"]
sqlite-database = ["dep:sqlite-database"]
