[workspace]
resolver = "2"
members = [
    # Servers
    "lib/servers/axum",

    # Auth
    "lib/auth/jwk",
    "lib/auth/no-op",

    # Databases
    "lib/databases/sqlite",

    # Library stuff
    "lib/spec"
]


[package]
name = "policy-store"
version = "0.1.0"
rust-version = "1.82"
edition = "2021"
authors = ["Bas Kloosterman", "Daniel Voogsgerd", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Stores policy for use with a policy reasoner."


[workspace.package]
repository = "https://github.com/epi-project/policy-store"
license = "Apache-2.0"


[[example]]
name = "sqlite"
path = "examples/sqlite/main.rs"
required-features = ["axum-server", "no-op-auth", "sqlite-database"]

[[example]]
name = "jwk"
path = "examples/jwk/main.rs"
required-features = ["axum-server", "jwk-auth", "jwk-auth-kid", "sqlite-database"]


[dependencies]
axum-server = { path = "lib/servers/axum", optional = true }
axum-server-spec = { path = "lib/servers/axum-spec", optional = true }
jwk-auth = { path = "lib/auth/jwk", optional = true }
no-op-auth = { path = "lib/auth/no-op", optional = true }
specifications = { path = "lib/spec" }
sqlite-database = { path = "lib/databases/sqlite", optional = true }


[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v3.2.1" }


[features]
default = []

all = ["servers", "auths", "databases"]

servers = ["axum-server"]
axum-server = ["axum-server-spec", "dep:axum-server"]
axum-server-spec = ["dep:axum-server-spec"]

auths = ["jwk-auth", "no-op-auth"]
jwk-auth = ["dep:jwk-auth"]
no-op-auth = ["dep:no-op-auth"]

databases = ["sqlite-database"]
sqlite-database = ["dep:sqlite-database"]

jwk-auth-kid = ["jwk-auth/kid"]
sqlite-database-embedded-migrations = ["sqlite-database/embedded-migrations"]
