[package]
name = "specifications"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Provides public interfaces for things to be compatible with the policy store library."


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
never-say-never = "6.6.666"
serde = { version = "1.0.213", features = ["derive"] }


[features]
default = []

