[package]
name = "specifications"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Provides public interfaces for things to be compatible with the policy store library."


[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
http = "1.0.0"
serde = { version = "1.0.184", features = ["derive"] }


[features]
default = []

