[package]
name = "jwk-auth"
version = "0.2.0"
rust-version = "1.81"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements a JSON Web Token (JWT) / JSON Web Key (JWK)-based scheme for the `AuthResolver`."


[dependencies]
base64ct = { version = "1.0.1", features = ["std"] }
http = "1.0.0"
jsonwebtoken = "9.0.0"
serde_json = "1.0.29"
thiserror = "2.0.0"
tracing = "0.1.37"
miette = "7.0.0"


# Fixing transient minimal version issues
time = "0.3.35"

specifications = { path = "../../spec" }


[features]
default = []

resolvers = ["kid"]
kid = []
