[package]
name = "no-op-auth"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
authors = ["Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements an `AuthResolver` that doesn't actually resolve anything."


[dependencies]
# base64ct = "1.6.0"
http = "1.1.0"
# jsonwebtoken = "9.3.0"
# serde_json = "1.0.132"
# thiserror = "1.0.61"
tracing = "0.1.40"

specifications = { path = "../../spec" }


[features]
default = []
