[package]
name = "no-op-auth"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
authors = ["Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements an `AuthResolver` that doesn't actually resolve anything."


[dependencies]
http = "1.0.0"
tracing = "0.1.37"

specifications = { path = "../../spec" }


[features]
default = []
