[package]
name = "sqlite-database"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements the `DatabaseConnector` for an SQLite backend."


[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.41.0", default-features = false, features = ["fs", "rt", "rt-multi-thread"] }
tracing = "0.1.40"

# error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v3.1.0" }

specifications = { path = "../../spec" }


[features]
default = []
