[package]
name = "sqlite-database"
version = "0.2.0"
rust-version = "1.82"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements the `DatabaseConnector` for an SQLite backend."


[dependencies]
chrono = "0.4.30"
diesel = { version = "2.2.3", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
serde = "1.0.184"
serde_json = "1.0.29"
thiserror = "2.0.0"
tokio = { version = "1.44.2", default-features = false, features = ["fs", "rt", "rt-multi-thread"] }
tracing = "0.1.37"

specifications = { path = "../../spec" }


[features]
default = []

embedded-migrations = []
