[package]
name = "axum-server-spec"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Pseudo-server that defines the API endpoint locations, methods and request/response bodies for the `axum-server`."


[dependencies]
axum = { version = "0.8.0", optional = true }
http = "1.0.0"
serde = { version = "1.0.184", features = ["derive"] }

specifications = { path = "../../spec" }


[features]
default = []

axum = ["dep:axum"]
