[package]
name = "axum-server"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
authors = ["Bas Kloosterman", "Tim Müller"]
repository.workspace = true
license.workspace = true
description = "Implements an out-of-the-box, standardized HTTP API for the policy store using `axum`."


[dependencies]
axum = "0.8.0"
futures = "0.3.11"
hyper = "1.1.0"
hyper-util = "0.1.3"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.29"
thiserror = "2.0.0"
tokio = { version = "1.44.2", default-features = false, features = ["signal"] }
tower-service = "0.3.3"
tracing = "0.1.37"

error-trace = { version = "3.3.1", features = ["serde"] }

axum-server-spec = { path = "../axum-spec", features = ["axum"] }
specifications = { path = "../../spec" }


[features]
default = []
